--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -8,6 +8,9 @@
     <h1>
       <span class="purple">{{ title }}</span>
     </h1>
+    <h3>
+        Author: {{ author}}
+      </h3>
     <br />
     <p class="readableText">
       {{ blog }}
