--- a/templates/blogsG.html
+++ b/templates/blogsG.html
@@ -12,7 +12,7 @@
     <div class="panel">
      <p class="padded"> This is the "it be like that sometimes" section.
        <br />
-       <button class="hubber">Do it be like that?</button>
+       <button onclick="location.href='/massnews'" type="button" class="hubber">Do it be like that?</button>
      </p>
     </div>
 
@@ -20,7 +20,7 @@
     <div class="panel">
      <p class="padded">This is what you came for. (probably).
        <br />
-       <button class="hubber">yayy</button>
+       <button onclick="location.href='/sports'" type="button" class="hubber">yayy</button>
      </p>
     </div>
 
@@ -38,15 +38,9 @@
     <div class="panel">
      <p class="padded">Newest and most interesting. Take a gander woodjya
        <br />
-       <button class="hubber">Up & Away</button>
+       <button onclick="location.href='/featured'" type="button" class="hubber">Up & Away</button>
      </p>
     </div>
-
-    <br />
-    <p class="readableText">
-      These buttons don't really do anything yet. If you go to the  <a href="/about">about</a>
-      section, you can learn what these buttons will be used for in the near future.
-    </p>
     <br />
   </div>
   <script>
