--- a/templates/layout.html
+++ b/templates/layout.html
@@ -53,7 +53,7 @@
                 <div class="container"><li class="nav-item"><a class="nav-link" href="/logout" style="margin-top:10px">Logout</a></li></div>
                 {% else %}
                 <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
-                <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
+                <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
                 {% endif %}
               </ul>
             </div>
