--- a/templates/profile.html
+++ b/templates/profile.html
@@ -24,6 +24,7 @@
             <tr>
               <th scope="col">Title</th>
               <th scope="col">Blog</th>
+              <th scope="col">Blog Genre</th>
               <th scope="col">Date Posted</th>
               <th scope="col">Blog Page</th>
             </tr>
@@ -33,6 +34,7 @@
                 <tr>
                   <td>{{ blog[4] }}</td>
                   <td>{{ blog[0] }}</td>
+                  <td>{{ blog[5] }}</td>
                   <td>{{ blog[3] }}</td>
                   <td><button onclick="location.href='/blogs/{{ blog[1] }}'" type="button" class="hubber">
                     {{ blog[4] }}</button></td>
