--- a/templates/writeT.html
+++ b/templates/writeT.html
@@ -7,13 +7,10 @@
     <br />
     <form action="/writeT" method="post">
       <div class="form-group">
-          <input class="form-control" name="blogN" placeholder="Title... " id="blogN" type="text">
+          <input class="form-control" name="Take" placeholder="Take... " id="Take" type="text">
       </div>
-        <div class="form-group">
-            <input class="form-control" name="blog" placeholder="Write About..." id="blog" type="text">
-        </div>
-        <br>
-        <button class="btn btn-primary" type="submit">Submit</button>
+      <br>
+      <button class="btn btn-primary" type="submit">Submit</button>
     </form>
   </div>
 {% endblock %}
