--- a/templates/about.html
+++ b/templates/about.html
@@ -8,26 +8,54 @@
     <br />
     <br />
     <h1>
-      CRLS <span class="purple">TAKES</span>
+      <span class="black">About</span>
     </h1>
     <p class="readableText">
-      CRLS Takes is an attempt by a CRLS student to replace the sports section of
-      Register Forum (the high school newspaper). This blogsite will include a variety of fucntions
-      which will make it easier for students to share opinions and articles on everything
-      sports-related, both within the school and for other sports organizations.
+      CRLS-Takes is a blog based entertainment website made for CRLS students. It was created
+      in 2019 by Max Davis and Will Cooper as a new club for CRLS students to show creativity.
+      The website gives every student with a account the ability to post and edit blogs and
+      comment on existing content. This is moderated by the club leaders who have to approve
+      all posted content.
     </p>
+    <h1>
+      <span class="black">FAQs</span>
+    </h1>
+    <h2>
+      <span class="purple">Why blog?</span>
+    </h2>
     <p class="readableText">
-      For the time being, many of the links you see do not do anything. In the future,
-      we'd like for there to be two main functions for CRLS Takes -- Takes and Blogs.
-      Blogs are your typical opinionated/unopinionated articles, whereas Takes are only a
-      sentence or two. Once we have a dynamic website which allows users to register for accounts
-      and to write Takes and Blogs, users can vote on Takes (five options: Freezing Cold, Cool,
-      Lukewarm, Hot, and Scalding). The Takes can be found through the dropdown menu in the
-      navigation bar, and each take can have a comment section and a link to a connected Blog.
+      Blogging is a more inclusive form of writing that will reach more people.
+      Blog writing is unlike journalistic writing as it allows for more opinion based
+      writing and has a lower standard. This combination is perfect to help include the
+      most amount of people who want to share their opinions but don’t know how or where.
     </p>
+    <h2>
+      <span class="purple">What type of content sets CRLS Takes apart?</span>
+    </h2>
     <p class="readableText">
-      Hopefully that wasn't too difficult to follow. If it was, hopefully future updates to
-      website will clear things up.
+      The looser editing allows for much more entertaining and less regulated content than
+      any other club at CRLS. The timetable for editing (or the lack thereof) allows content
+      to be posted much more quickly allowing the website to stay on top of current events
+      and have fresh topics.
+    </p>
+    <h2>
+      <span class="purple">How do I post?</span>
+    </h2>
+    <p class="readableText">
+      Posting is as simple as clicking the write tab. If you have an account you will be
+      directed to a page where you can type a header and an article/spiel about any topic
+      you want. After writing, you simply press publish and it will be sent to one of the
+      head editors. They will loosely edit any glaring grammar and spelling mistakes and
+      make sure the topic is approved for the website then post it onto the site. Once it
+      is up people can rate the article and comment their opinions.
+    </p>
+    <h2>
+      <span class="purple">Do you store user data?</span>
+    </h2>
+    <p class="readableText">
+      The database only collects name, grade, and username from any user on the site. As
+      the user interacts with the site, the data collected from comments, articles, and
+      ratings will show up on their own personal page for other people on the site to see.
     </p>
     <div class="row">
      <div class="column">
