--- a/templates/index.html
+++ b/templates/index.html
@@ -11,12 +11,12 @@
           </h1>
           <img class="shake" src="/static/logo.ico" alt="Logo" style="width:200px;height:200px;" />
           <p>
-            Because the Register Forum sucks and you deserve better. You're welcome.
+            CRLS's premiere destination for blogging and entertainment media
           </p>
         </div>
         <button class="accordion">Why CRLS Takes</button>
         <div class="panel">
-         <p class="padded">Find out more on the "about" page.
+         <p class="padded">Find out more on our "About" page
            <br />
            <button onclick="location.href='/about'" type="button" class="hubber">
              About</button>
@@ -25,6 +25,7 @@
 
         <button class="accordion">Takes</button>
         <div class="panel">
+          <p class="padded">Here is the hub of opinions. Some are good and some are not as good
           <br />
          <button class="pill">Freezing Cold</button>
          <button class="pill">Cool</button>
@@ -33,11 +34,12 @@
          <button onclick="location.href='/scalding'" type="button" class="pill">
            Scalding</button>
          <br />
+         </p>
         </div>
 
         <button class="accordion">Blogs</button>
         <div class="panel">
-         <p class="padded">This is where all the good stuff is. I think.
+         <p class="padded">You can find the blogs right here. right later.
            <br />
            <button class="hubber">Take me</button>
          </p>
