--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,39 +15,10 @@
     <body>
       <header>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-          <a class="navbar-brand" href="/">
-            <img src="/static/WebLogo.png" alt="CRLS-Takes Logo #1" style="width:20%">
-          </a>
           <div class="container">
-<<<<<<< HEAD
-            <div class="dropdown">
-              <button class="dropbtn" href="/takesG">Takes</button>
-              <div class="dropdown-content">
-               <a href="/takesG">General</a>
-               <a href="/error">Freezing Cold</a>
-               <a href="/error">Cool</a>
-               <a href="/error">Lukewarm</a>
-               <a href="/error">Hot</a>
-               <a href="/error">Scalding</a>
-              </div>
-            </div>
-            <div class="dropdown">
-              <button class="dropbtn" href="/blogsG">Blogs</button>
-              <div class="dropdown-content">
-               <a href="/blogsG">General</a>
-               <a href="/error">Mass News</a>
-               <a href="/popblogs">Pop</a>
-               <a href="/error">Sports</a>
-               <a href="/error">Featured</a>
-             </div>
-=======
-            <br />
-            <div class="container">
-              <a class="navbar-brand" href="/">
-                    <img src="/static/WebLogo.png" alt="CRLS-Takes Logo #1" style="width:30%; margin-bottom:-40px; margin-left:-13px">
-                  </a>
->>>>>>> ace04e13cdbd874381cef7f042836bdd3d244afd
-            </div>
+            <a class="navbar-brand" href="/">
+              <img src="/static/WebLogo.png" alt="CRLS-Takes Logo #1" style="width:30%; margin-bottom:-40px">
+            </a>
               <ul class="navbar-nav mr-auto">
                 {% if session.user_id %}
                 <div class="container">
@@ -82,19 +53,7 @@
                 <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
                 {% endif %}
               </ul>
-<<<<<<< HEAD
-            <ul class="navbar-nav ml-auto mt-2">
-              <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
-            </ul>
-            {% else %}
-            <ul class="navbar-nav ml-auto mt-2">
-              <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
-              <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
-            </ul>
-            {% endif %}
-=======
             </div>
->>>>>>> ace04e13cdbd874381cef7f042836bdd3d244afd
           </div>
         </nav>
       </header>
