added a bunch of things

--- a/templates/blogsDisplay.html
+++ b/templates/blogsDisplay.html
@@ -7,7 +7,7 @@
     <br />
     <div class="jumbotron">
       <h1>
-        MASS <span class="purple">NEWS</span>
+        <span class="purple">{{ type }}</span>
       </h1>
       </div>
     <br />
