--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,11 +26,11 @@
                     <button class="dropbtn" href="/takesG">Takes</button>
                     <div class="dropdown-content">
                       <a href="/takesG">General </a>
-                      <a href="/error">Freezing Cold </a>
-                      <a href="/error">Cool</a>
-                      <a href="/error">Lukewarm</a>
-                      <a href="/error">Hot</a>
-                      <a href="/error">Scalding</a>
+                      <a href="/tfc">Freezing Cold </a>
+                      <a href="/tc">Cool</a>
+                      <a href="/tl">Lukewarm</a>
+                      <a href="/th">Hot</a>
+                      <a href="/ts">Scalding</a>
                     </div>
                   </div>
                 </div>
@@ -38,10 +38,10 @@
                   <button class="dropbtn" href="/blogsG">Blogs</button>
                   <div class="dropdown-content">
                     <a href="/blogsG">General</a>
-                    <a href="/massnews">Mass News</a>
-                    <a href="/error">Pop</a>
-                    <a href="/error">Sports</a>
-                    <a href="/error">Featured</a>
+                    <a href="/bm">Mass News</a>
+                    <a href="/bp">Pop</a>
+                    <a href="/bs">Sports</a>
+                    <a href="/bf">Featured</a>
                   </div>
                 </div>
                 <div class="container"><li class="nav-item"><a class="nav-link" href="/about" style="margin-top:10px">About</a></li></div>
