--- a/templates/writeT.html
+++ b/templates/writeT.html
@@ -7,7 +7,7 @@
     <br />
     <form action="/writeT" method="post">
       <div class="form-group">
-          <input class="form-control" name="Take" placeholder="Take... " id="Take" type="text">
+          <input class="form-control" name="take" placeholder="Take... " id="take" type="text">
       </div>
       <br>
       <button class="btn btn-primary" type="submit">Submit</button>
