--- a/templates/takesDisplay.html
+++ b/templates/takesDisplay.html
@@ -6,7 +6,7 @@
   <div class="container">
     <br />
     <h1 class="center">
-      <span class="purple">TAKES</span>
+      <span class="purple">{{ type }}</span> TAKES
     </h1>
     <table class="table table-hover">
       <thead>
