--- a/templates/index.html
+++ b/templates/index.html
@@ -27,11 +27,11 @@
         <div class="panel">
           <p class="padded">Here is the hub of opinions. Some are good and some are not as good
           <br />
-         <button class="pill">Freezing Cold</button>
-         <button class="pill">Cool</button>
-         <button class="pill">Lukewarm</button>
-         <button class="pill">Hot</button>
-         <button onclick="location.href='/scalding'" type="button" class="pill">
+         <button onclick="location.href='/tfc'" type="button" class="pill">Freezing Cold</button>
+         <button onclick="location.href='/tc'" type="button" class="pill">Cool</button>
+         <button onclick="location.href='/tl'" type="button" class="pill">Lukewarm</button>
+         <button onclick="location.href='/th'" type="button" class="pill">Hot</button>
+         <button onclick="location.href='/ts'" type="button" class="pill">
            Scalding</button>
          <br />
          </p>
