--- a/templates/blogsG.html
+++ b/templates/blogsG.html
@@ -12,7 +12,7 @@
     <div class="panel">
      <p class="padded"> This is the "it be like that sometimes" section.
        <br />
-       <button onclick="location.href='/massnews'" type="button" class="hubber">Do it be like that?</button>
+       <button onclick="location.href='/bm'" type="button" class="hubber">Do it be like that?</button>
      </p>
     </div>
 
@@ -20,7 +20,7 @@
     <div class="panel">
      <p class="padded">This is what you came for. (probably).
        <br />
-       <button onclick="location.href='/sports'" type="button" class="hubber">yayy</button>
+       <button onclick="location.href='/bs'" type="button" class="hubber">yayy</button>
      </p>
     </div>
 
@@ -29,18 +29,11 @@
      <p class="padded"> I think pop is short for population so click this button to
        eliminate the population
        <br />
-       <button onclick="location.href='/popblogs'" type="button" class="hubber">
+       <button onclick="location.href='/bp'" type="button" class="hubber">
          Eliminate</button>
      </p>
     </div>
 
-    <button class="accordion">Featured</button>
-    <div class="panel">
-     <p class="padded">Newest and most interesting. Take a gander woodjya
-       <br />
-       <button onclick="location.href='/featured'" type="button" class="hubber">Up & Away</button>
-     </p>
-    </div>
     <br />
   </div>
   <script>
