--- a/templates/about.html
+++ b/templates/about.html
@@ -60,7 +60,7 @@
     <div class="row">
      <div class="column">
        <div class="card">
-         <img src="/static/Will.jpg" alt="Will" style="width:100%">
+         <img src="/static/WillDab.png" alt="Will" style="width:100%">
          <div class="cont4iner">
            <h2>Will Cooper</h2>
            <p class="title">CEO &amp; Founder</p>
@@ -72,7 +72,7 @@
      </div>
      <div class="column">
        <div class="card">
-         <img src="/static/Max.jpg" alt="Max" style="width:100%">
+         <img src="/static/Smax.png" alt="Max" style="width:100%">
          <div class="cont4iner">
            <h2>Max Davis</h2>
            <p class="title">Art Director</p>
@@ -84,11 +84,11 @@
      </div>
      <div class="column">
        <div class="card">
-         <img src="/static/Albert.jpg" alt="Albert" style="width:100%" />
+         <img src="/static/WackMax.png" alt="Wack Max" style="width:100%" />
          <div class="cont4iner">
-           <h2>Albert Liu</h2>
-           <p class="title">Poo Poo</p>
-           <p>Wack</p>
+           <h2>Max Rice Krispies</h2>
+           <p class="title">Computer Clown</p>
+           <p>Nerd</p>
            <p>example@example.com</p>
            <p><button class="aboutMe">Contact</button></p>
          </div>
